--- a/force_categories/stylesheets/force_cat.css
+++ b/force_categories/stylesheets/force_cat.css
@@ -35,7 +35,7 @@
   width:700px
 }
 
-#musthave,#mustactions,#categories,#cantactions,#canthave{
+#mustactions,#categories,#cantactions,.catpick{
   float:left;
   padding:0 20px
 }
